Add option to transform data to log space

--- a/views/datasets/summaryplots.haml
+++ b/views/datasets/summaryplots.haml
@@ -5,6 +5,7 @@
   :javascript
     $data.file = "#{@file}";
     $data.yMax = #{@y_max};
+    $data.logTransform = #{@log_transform};
     $data.density = #{@density};
     $data.apdex_t = #{@apdex_t};
     $data.value_index = #{@value_index};
