Traffic animation demo
Thanks Ward Cunningham!

Conflicts:
	views/layout.haml

--- a/views/datasets/horizon.haml
+++ b/views/datasets/horizon.haml
@@ -24,7 +24,7 @@
     .checkbox {
       margin-left: 24px;
     }
-    #densityGroup, #apdexTGroup {
+    #logTransformGroup, #densityGroup, #apdexTGroup {
       display: none;
     }
     .sparkline .name {
