--- a/views/datasets/threeway.haml
+++ b/views/datasets/threeway.haml
@@ -34,6 +34,17 @@
         All Data
       %button#reset{style: 'display: none', onClick: 'resetSelection();'}
         RESET
+    %p
+      .radio.inline Show quartile region: 
+      %label.radio.inline
+        %input#enduser{type: 'radio', name: 'quartile', value: "arithmetic", onchange: 'selectQuartile(this);'}
+        arithmetic
+      %label.radio.inline
+        %input#appserver{type: 'radio', name: 'quartile', value: "geometric", onchange: 'selectQuartile(this);'}
+        geometric
+      %label.radio.inline
+        %input#appserver{type: 'radio', name: 'quartile', value: "", checked: true, onchange: 'selectQuartile(this);'}
+        none
 .row
   .span6
     %h1 
@@ -68,7 +79,9 @@
 
   // This defines the attributes of the timeslice record that are in the legend of the plot.
   var plots = ["mean", "mode", "median", "pct_99", "apdex", "rpm"];
-  timeseriesInit(d3.select("#timeseries-sect > div.timeseries"), plots);
+  timeseries(d3.select("#timeseries-sect > div.timeseries"))
+    .legend(plots);
+  
   histogramInit(d3.select("#histogram-sect > div.histogram"));
   treemapInit(d3.select("div#treemap-sect"));
   $data.dispatch.on("reloadData.treemap", loadTreemapData);
