--- a/public/css/plots.css
+++ b/public/css/plots.css
@@ -1,3 +1,7 @@
+.arithmetic {
+    fill: #8e2;
+    stroke: #8e2;
+}
 .mean {
     stroke: #8E2;
     background: #8E2
@@ -16,6 +20,10 @@
     stroke: #8E2 ;
     background: #8E2;
     stroke-dasharray: 5, 3;
+}
+.geometric {
+    fill: #0a9;
+    stroke: #0a9;
 }
 .g_mean {
     stroke: #0a9 ;
@@ -43,6 +51,10 @@
 .min {
     stroke: black ;
     background: black
+}
+.actual {
+    fill: #900;
+    stroke: #900 ;
 }
 .pct_85 {
     stroke: #F66 ;
@@ -90,16 +102,8 @@
     fill: #333;
     stroke: #333;
 }
-.geometric {
-    fill: #8E2;
-    stroke: #8E2 ;
-}
-.arithmetic {
-    fill: #0a9;
-    stroke: #0a9 ;
-}
 
-.quartiles rect {
+.quartiles  {
     opacity: 0.8;
     stroke-width: 1px;
 }
