--- a/views/datasets/quartiles.haml
+++ b/views/datasets/quartiles.haml
@@ -60,5 +60,22 @@
     .legend(plots);
 
   histogramInit(d3.select("div#histogram"));
-  summaryInit(d3.select("div#summary-values-sect"));
+  var s = summary(d3.select("div#summary-values-sect"));
+  s.row()
+      .column("50 % (Median)", "median", "ms")
+      .column("85 %", "pct_85", "ms")
+      .column("95 %", "pct_95", "ms")
+      .column("99 %", "pct_99", "ms");
+  s.row()     
+      .column("Arithmetic Mean", "mean", "ms")
+      .column("Arithmetic p 85 %", "a_p85", "ms")
+      .column("Arithmetic p 95 %", "a_p95", "ms")
+      .column("Arithmetic p 99 %", "a_p99", "ms");
+  s.row()
+      .column("Geometric Mean", "g_mean", "ms")
+      .column("Geometric p 85 %", "g_p85", "ms")
+      .column("Geometric p 95 %", "g_p95", "ms")
+      .column("Geometric p 99 %", "g_p99", "ms")
+  s.init();
+
   $data.dispatch.reloadData();
