--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,11 +23,11 @@
           %ul.nav
             %li.dropdown
               %a.dropdown-toggle{:href=>"#", :'data-toggle' => "dropdown"}
-                Summary Plots
+                Timeseries Plots
                 %b.caret
               %ul.dropdown-menu
                 %li
-                  %a{href:"/datasets/summaryplots.html"} Histogram Demo
+                  %a{href:"/datasets/histogram.html"} Histogram Demo
                 %li
                   %a{href:"/datasets/threeway.html"} Treemap Demo
                 %li
