--- a/views/datasets/threeway.haml
+++ b/views/datasets/threeway.haml
@@ -26,25 +26,11 @@
           $data.dispatch.newTreemapData();
       });
     }
+  :css
+    #logTransformGroup, #apdexTGroup {
+      display: none;
+    }
 
-.row
-  .span12
-    %h3
-      %span#range
-        All Data
-      %button#reset{style: 'display: none', onClick: 'resetSelection();'}
-        RESET
-    %p
-      .radio.inline Show quartile region: 
-      %label.radio.inline
-        %input#enduser{type: 'radio', name: 'quartile', value: "arithmetic", onchange: 'selectQuartile(this);'}
-        arithmetic
-      %label.radio.inline
-        %input#appserver{type: 'radio', name: 'quartile', value: "geometric", onchange: 'selectQuartile(this);'}
-        geometric
-      %label.radio.inline
-        %input#appserver{type: 'radio', name: 'quartile', value: "", checked: true, onchange: 'selectQuartile(this);'}
-        none
 .row
   .span6
     %h3 
@@ -66,9 +52,13 @@
   .span12
     %h3 
       Treemap Breakdown
+      %span#range
+        All Data
+      %button#reset{style: 'display: none', onClick: 'resetSelection();'}
+        RESET
       %img.treemap.busy{src:'/images/busy.gif', style: 'display:none'}
     %p
-      Click Scatterplot or Histogram to map activity for a single column.
+      Display requests grouped by path.  Region area corresponds to call count for selected ranges.  Drag over above charts to select a range.
       %a{href: '/data/treemap/nr-queuing-spike.json', target: "_new"}
         See sample json.
     #treemap-sect
@@ -76,7 +66,7 @@
 :javascript
 
   // This defines the attributes of the timeslice record that are in the legend of the plot.
-  var plots = ["mean", "mode", "median", "pct_99", "apdex", "rpm"];
+  var plots = ["mean", "median", "mode", "throughput"];
   timeseries(d3.select("#timeseries-sect > div.timeseries"))
     .legend(plots);
   
