--- a/public/css/plots.css
+++ b/public/css/plots.css
@@ -6,6 +6,11 @@
     stroke: #8E2;
     background: #8E2
 }
+.a_p75 {
+    stroke: #8E2 ;
+    background: #8E2;
+    stroke-dasharray: 20, 3, 3, 3, 3, 3;
+}
 .a_p85 {
     stroke: #8E2 ;
     background: #8E2;
@@ -28,6 +33,11 @@
 .g_mean {
     stroke: #0a9 ;
     background: #0a9
+}
+.g_p75 {
+    stroke: #0a9 ;
+    background: #0a9;
+    stroke-dasharray: 20, 3, 3, 3, 3, 3;
 }
 .g_p85 {
     stroke: #0a9 ;
@@ -55,6 +65,11 @@
 .actual {
     fill: #900;
     stroke: #900 ;
+}
+.pct_75 {
+    stroke: #F66 ;
+    background: #F66;
+    stroke-dasharray: 20, 3, 3, 3, 3, 3;
 }
 .pct_85 {
     stroke: #F66 ;
@@ -150,23 +165,26 @@ div.summary-row {
     float: none;
 }
 div.summary-item {
-    border: solid 2px #666;
+//    border: solid 1px #999;
     display: inline;
     position: relative;
     float: left;
-    margin: 6px;
+    margin: 2px;
     padding: 8px;
-    width: 120px;
+    width: 110px;
 }       
-.summary-item div {
+.summary-item {
+    text-align: center;
+}
+.summary-item .label {
     text-align: center;
 }
 .summary-item span.value {
-    font-size: 28px;
+    font-size: 20px;
     text-align: center;
 }
 .summary-item span.units {
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
 }
 
@@ -177,7 +195,7 @@ div.summary-item {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.0;
 }
 
 /*
