Update index page

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,16 +13,21 @@
       Project Readme file.
   %h3 Experiments
   %p
-    These is meant to be an index of pages showing different visualizations of datasets.  If you want
-    to add a brand new experiment, feel free to add to the list. 
+    The experiments are all accessible via the nav bar.  They include:
   %ul
     %li
-      %a{href:"datasets/threeway.html"}
-        Interactive Timeseries/Histogram/Treemap
+      %a{href:"datasets/histogram.html"}
+        Histogram/heatmap demo
     %li
-      %a{href:"datasets/summaryplots.html"}
-        Survey of summary measures (arithmetic, geometric, percentiles...)
+      %a{href:"datasets/threeway.html"}
+        Treemap experiment
     %li
       %a{href:"datasets/horizon.html"}
-        Using a horizon chart to breakdown the respons times
+        Using a horizon chart to breakdown the response times
+    %li
+      %a{href:"datasets/quartiles.html"}
+        Experiment with estimating middle quartiles
+    %li
+      %a{href:"datasets/quartiles.html"}
+        Fun animation of application traffic
 
