--- a/views/layout.haml
+++ b/views/layout.haml
@@ -27,11 +27,11 @@
                 %b.caret
               %ul.dropdown-menu
                 %li
-                  %a{href:"/datasets/histogram.html"} Histogram Demo
+                  %a{href:"/datasets/histogram.html"} Histogram/Heatmap Demo
                 %li
                   %a{href:"/datasets/threeway.html"} Treemap Demo
                 %li
-                  %a{href:"/datasets/quartiles.html"} Quartiles Demo
+                  %a{href:"/datasets/quartiles.html"} Quartiles Estimation Experiment
             %li{class: (params[:view] == "horizon" ? 'active' : nil)}
               %a{href:"/datasets/horizon.html"} Horizon Plots
             %li{class: (params[:view] == "traffic" ? 'active' : nil)}
