Support for more generic alternative dataset format
This introduces support for a dataset format that is more generic, with a header line and arbitrary attributes.

--- a/views/datasets/horizon.haml
+++ b/views/datasets/horizon.haml
@@ -8,12 +8,12 @@
     $data.yMax = #{@y_max};
     $data.density = 15
     $data.apdex_t = #{@apdex_t};
-    $data.value_index = #{@value_index};
+    $data.measure = "#{@measure}";
     $data.filter = "#{@filter_label}";
     $data.only = "#{@only ? '1' : '0'}";
 
   :css
-    #logTransformGroup, #densityGroup, #apdexTGroup {
+    #logTransformGroup, #densityGroup, #apdexTGroup, #filterGroup {
       display: none;
     }
 
