--- a/views/datasets/histogram.haml
+++ b/views/datasets/histogram.haml
@@ -8,7 +8,7 @@
     $data.logTransform = #{@log_transform};
     $data.density = #{@density};
     $data.apdex_t = #{@apdex_t};
-    $data.value_index = #{@value_index};
+    $data.measure = "#{@measure}";
     $data.filter = "#{@filter_label}";
     $data.only = "#{@only ? '1' : '0'}";
     $data.width = 1000;
@@ -20,16 +20,16 @@
     %div
       .radio.inline Show middle quartiles: 
       %label.radio.inline
-        %input#enduser{type: 'radio', name: 'quartile', value: "arithmetic", onchange: 'selectQuartile(this);'}
+        %input{type: 'radio', name: 'quartile', value: "arithmetic", onchange: 'selectQuartile(this);'}
         arithmetic
       %label.radio.inline
-        %input#appserver{type: 'radio', name: 'quartile', value: "geometric", onchange: 'selectQuartile(this);'}
+        %input{type: 'radio', name: 'quartile', value: "geometric", onchange: 'selectQuartile(this);'}
         geometric
       %label.radio.inline
-        %input#appserver{type: 'radio', name: 'quartile', value: "actual", onchange: 'selectQuartile(this);'}
+        %input{type: 'radio', name: 'quartile', value: "actual", onchange: 'selectQuartile(this);'}
         actual
       %label.radio.inline
-        %input#appserver{type: 'radio', name: 'quartile', value: "", checked: true, onchange: 'selectQuartile(this);'}
+        %input{type: 'radio', name: 'quartile', value: "", checked: true, onchange: 'selectQuartile(this);'}
         none
 
 .row
