--- a/views/layout.haml
+++ b/views/layout.haml
@@ -67,13 +67,13 @@
                     = filename
               &nbsp;
               %label.radio.inline
-                %input#enduser{type: 'radio', name: 'value_index', value: 3, onchange: 'refreshData();'}
+                %input#frontend{type: 'radio', name: 'measure', value: "frontend", onchange: 'refreshData();'}
                 end user
               %label.radio.inline
-                %input#appserver{type: 'radio', name: 'value_index', value: 4, onchange: 'refreshData();'}
+                %input#backend{type: 'radio', name: 'measure', value: "backend", onchange: 'refreshData();'}
                 app server
 
-          .control-group
+          .control-group#filterGroup
             %label.control-label filter
             .controls
               %select{id: 'filter', name: 'filter', size: 1, onchange: 'refreshData();'}
