Implement dimension selectors in the UI for datasets in new format with more than one dimension

--- a/views/datasets/histogram.haml
+++ b/views/datasets/histogram.haml
@@ -9,6 +9,8 @@
     $data.density = #{@density};
     $data.apdex_t = #{@apdex_t};
     $data.measure = "#{@measure}";
+    $data.primary_attr = "#{@primary_attr}";
+    $data.all_attrs = #{@all_attrs.to_json};
     $data.filter = "#{@filter_label}";
     $data.only = "#{@only ? '1' : '0'}";
     $data.width = 1000;
