--- a/views/datasets/horizon.haml
+++ b/views/datasets/horizon.haml
@@ -9,8 +9,8 @@
     $data.density = 15
     $data.apdex_t = #{@apdex_t};
     $data.measure = "#{@measure}";
-    $data.primary_attr = "#{@primary_attr}";
-    $data.all_attrs = #{@all_attrs.to_json};
+    $data.primary_dim = "#{@primary_dim}";
+    $data.dimensions = #{@dimensions.to_json};
     $data.filter = "#{@filter_label}";
     $data.only = "#{@only ? '1' : '0'}";
 
